# fde_fabric_mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.dev-docs/: commands.md  review-checklist.md
.dev-docs/context/: PR_DRAFT.md  TASKS.md  WORKING.md
.dev-docs/features/: CURRENT.md
.github/: pull_request_template.md
src/fde_fabric_mcp/: auth.py  config.py  server.py
src/fde_fabric_mcp/clients/: fabric.py  pipeline.py  sql.py
src/fde_fabric_mcp/core/: context_store.py  guardrails.py  pipeline_runner.py  sql_endpoints.py
src/fde_fabric_mcp/tools/: identity.py  lakehouse.py  notebooks.py  pipelines.py  projects.py  warehouse.py  workspace.py
src/fde_fabric_mcp/tools/notebook_templates/: basic.json  python_delta_or_sql_to_delta_template.json  python_file_to_delta_template.json
